<resources>
    <string name="app_name">SplashActivity_JAVA</string>
    <string name="button">Iniciar</string>
    <string name="color">Cor</string>
    <string name="FAQ">FAQ</string>
    <string name="VERMELHO">Vermelho</string>
    <string name="VERDE">Verde</string>
    <string name="AZUL">Azul</string>
    <string name="ROXO">Roxo</string>
    <string name="ROSA">Rosa</string>
    <string name="LARANJA">Laranja</string>
    <string name="CINZENTO">Cinzento</string>
    <string name="voltar_paint">Voltar</string>
    <string name="paint">Paint</string>
    <string name="canvas">Canvas</string>
    <string name="palette">Palette</string>
    <string name="canvasFragment">Desenhe aqui!!</string>
    <string name="paletteFragment">Escolha a cor aqui!!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Apagar">Apagar</string>
    <string name="MAP">MAP</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="Iniciar_Caminho">Iniciar</string>
    <string name="Parar_Caminho">Parar</string>
    <string name="guardar">Guardar</string>
    <string name="download">Download</string>
    <string name="guardar_land">Guardar</string>
    <string name="download_land">Download</string>
    <string name="DescricaoFAQ">Grupo 11, TP12: \nDiogo Furtado Fc57668 \nPedro Guilherme Fc57667 \nVyacheslav Stafiyuk Fc57589</string>
</resources>