<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cores"
    android:id="@+id/EcraCores">

    <Button
        android:id="@+id/VERMELHO"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/VERMELHO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/VERDE"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/VERDE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/VERMELHO" />

    <Button
        android:id="@+id/AZUL"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/AZUL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/VERDE" />

    <Button
        android:id="@+id/ROXO"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/ROXO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AZUL" />

    <Button
        android:id="@+id/ROSA"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/ROSA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ROXO" />

    <Button
        android:id="@+id/LARANJA"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/LARANJA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ROSA" />

    <Button
        android:id="@+id/CINZENTO"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/CINZENTO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LARANJA" />
</androidx.constraintlayout.widget.ConstraintLayout>