<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:saveEnabled="true"
    tools:context=".Settings">

    <Button
        android:id="@+id/paintButton"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/paint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/faqButton" />

    <Button
        android:id="@+id/colorButton"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/faqButton"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/FAQ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorButton" />

    <Button
        android:id="@+id/mapButton"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/MAP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paintButton" />
</androidx.constraintlayout.widget.ConstraintLayout>