<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/paint_default"
    android:orientation="vertical"
    tools:context=".Paint">

    <Button
        android:id="@+id/voltar_paint"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/voltar_paint"
        app:layout_constraintEnd_toStartOf="@+id/canvasButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voltar_paint" />

    <Button
        android:id="@+id/canvasButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/canvas"
        app:layout_constraintEnd_toStartOf="@+id/paletteButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/voltar_paint"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/paletteButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/palette"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/canvasButton"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>